[gd_scene load_steps=6 format=3 uid="uid://c1733arhcko0q"]

[ext_resource type="Theme" uid="uid://becgxgj56yfdh" path="res://assets/style/default_theme.tres" id="1_he4o6"]
[ext_resource type="Script" path="res://scripts/uis/solo_menu/level_selector/LevelsList.gd" id="1_hgblp"]
[ext_resource type="Script" path="res://scripts/uis/level_editor_selection_menu/LevelSelection.gd" id="2_e1beu"]
[ext_resource type="PackedScene" uid="uid://o458ah6nqt0b" path="res://scenes/uis/LevelSettingsMenu.tscn" id="3_q4ji0"]
[ext_resource type="PackedScene" uid="uid://ctda2nuhe5mvw" path="res://scenes/instances/level/DefaultLevel.tscn" id="5_wlka4"]

[node name="LevelEditorSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="DefaultLevel" parent="." instance=ExtResource("5_wlka4")]
mode = 1

[node name="Uis" type="CanvasLayer" parent="."]

[node name="LevelSelection" type="Control" parent="Uis"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_e1beu")

[node name="LevelList" type="ItemList" parent="Uis/LevelSelection"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 74.0
offset_right = 466.0
offset_bottom = -78.0
grow_vertical = 2
theme = ExtResource("1_he4o6")
script = ExtResource("1_hgblp")
default = false

[node name="CreateImportLevelButton" type="Button" parent="Uis/LevelSelection"]
layout_mode = 0
offset_right = 466.0
offset_bottom = 74.0
theme = ExtResource("1_he4o6")
text = "button.create_import_level"

[node name="BackButton" type="Button" parent="Uis/LevelSelection"]
layout_mode = 0
offset_top = 642.0
offset_right = 466.0
offset_bottom = 716.0
theme = ExtResource("1_he4o6")
text = "button.back
"

[node name="EditButton" type="Button" parent="Uis/LevelSelection"]
layout_mode = 0
offset_left = 711.0
offset_top = 552.0
offset_right = 1066.0
offset_bottom = 652.0
theme = ExtResource("1_he4o6")
text = "button.edit_level"

[node name="DeleteButton" type="Button" parent="Uis/LevelSelection"]
custom_minimum_size = Vector2(512, 48)
layout_mode = 0
offset_left = 748.0
offset_top = 20.0
offset_right = 1260.0
offset_bottom = 68.0
theme = ExtResource("1_he4o6")
text = "button.delete_level"

[node name="DifficultyColor" type="ColorRect" parent="Uis/LevelSelection"]
layout_mode = 0
offset_left = 509.0
offset_top = 168.0
offset_right = 1230.0
offset_bottom = 208.0
color = Color(1, 0, 0, 1)

[node name="Label" type="Label" parent="Uis/LevelSelection/DifficultyColor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = -13.5
offset_right = 324.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_he4o6")
theme_override_font_sizes/font_size = 24
text = "label.level_difficulty.easy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionColor" type="ColorRect" parent="Uis/LevelSelection"]
layout_mode = 0
offset_left = 633.0
offset_top = 248.0
offset_right = 1145.0
offset_bottom = 504.0
color = Color(0.00784314, 0.266667, 0.380392, 0.501961)

[node name="LevelDescription" type="RichTextLabel" parent="Uis/LevelSelection/DescriptionColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_he4o6")

[node name="LevelCreateImportMenu" type="Control" parent="Uis"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelCreation" parent="Uis/LevelCreateImportMenu" instance=ExtResource("3_q4ji0")]
visible = false
layout_mode = 1

[connection signal="item_selected" from="Uis/LevelSelection/LevelList" to="Uis/LevelSelection/LevelList" method="_on_item_selected"]
[connection signal="on_level_selected" from="Uis/LevelSelection/LevelList" to="Uis/LevelSelection" method="_on_level_list_on_level_selected"]
[connection signal="pressed" from="Uis/LevelSelection/BackButton" to="Uis/LevelSelection" method="_on_back_button_pressed"]
[connection signal="pressed" from="Uis/LevelSelection/EditButton" to="Uis/LevelSelection" method="_on_edit_button_pressed"]
